--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,23 @@
 RewriteEngine On
+
 RewriteRule ^views/ - [R=404,L]
+RewriteRule ^components/ - [R=404,L]
+RewriteRule ^Others/ - [R=404,L]
 
 ErrorDocument 404 /_NOTFOUND.php
 ErrorDocument 403 /_NOTFOUND.php
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^([^\.]+)/?$ $1.php [NC,L]
+
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} \.php$
 RewriteRule .* - [L]
 
 RewriteCond %{REQUEST_FILENAME} \.css$ [OR]
-RewriteCond %{REQUEST_FILENAME} \.js$
+RewriteCond %{REQUEST_FILENAME} \.js$ [OR]
+RewriteCond %{REQUEST_FILENAME} \.md$
 RewriteRule .* - [R=404,L]
 
