Database and Backend

--- a/.htaccess
+++ b/.htaccess
@@ -3,6 +3,7 @@ RewriteEngine On
 RewriteRule ^views/ - [R=404,L]
 RewriteRule ^components/ - [R=404,L]
 RewriteRule ^Others/ - [R=404,L]
+RewriteRule conn - [R=404,L]
 
 ErrorDocument 404 /_NOTFOUND.php
 ErrorDocument 403 /_NOTFOUND.php
@@ -21,3 +22,6 @@ RewriteCond %{REQUEST_FILENAME} \.js$ [OR]
 RewriteCond %{REQUEST_FILENAME} \.md$
 RewriteRule .* - [R=404,L]
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^([^/]+)/?$ controllers/$1 [L]
